refactor(package): move shared JS from background/helpers to shared/

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
     </div>
   </body>
 
-  <script src="background/helpers/socket.io.js"></script>
-  <script src="background/helpers/adapter.js"></script>
-  <script src="background/helpers/RTCMultiConnection.js"></script>
-  <script src="background/helpers/IceServersHandler.js"></script>
-  <script src="background/helpers/getStats.js"></script>
+  <script src="shared/socket.io.js"></script>
+  <script src="shared/adapter.js"></script>
+  <script src="shared/RTCMultiConnection.js"></script>
+  <script src="shared/IceServersHandler.js"></script>
+  <script src="shared/getStats.js"></script>
 
   <script src="scripts.js"></script>
 </html>
