--- a/index.html
+++ b/index.html
@@ -63,5 +63,6 @@
   <script src="shared/IceServersHandler.js"></script>
   <script src="shared/getStats.js"></script>
 
-  <script src="scripts.js"></script>
+  <script src="manifest.bundle.js"></script>
+  <script src="scripts.bundle.js"></script>
 </html>
